--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -14,6 +14,6 @@ jobs:
             - name: upload the artifact
               uses: actions/upload-artifact@
               with:
-                name: ${{anv.ARTIFACT_NAME}}
+                name: ${{env.ARTIFACT_NAME}}
                 path: .
 
