--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/checkout@v2
             
             - name: upload the artifact
-              uses: actions/upload-artifact@
+              uses: actions/upload-artifact@v2
               with:
                 name: ${{env.ARTIFACT_NAME}}
                 path: .
